--- a/virtuswift-react/src/styles/animations.css
+++ b/virtuswift-react/src/styles/animations.css
@@ -215,4 +215,49 @@
 
 .case-study-card:hover .industry-icon {
   transform: scale(1.2);
-} 
+}
+
+.industries-active {
+  position: relative;
+}
+
+.industries-active::after {
+  content: '';
+  position: absolute;
+  bottom: -15px;
+  left: 0;
+  width: 100%;
+  height: 8px;
+  background-color: #3a3dc4;
+  z-index: 60;
+}
+
+.services-active {
+  position: relative;
+}
+
+.services-active::after {
+  content: '';
+  position: absolute;
+  bottom: -15px;
+  left: 0;
+  width: 100%;
+  height: 8px;
+  background-color: #3a3dc4;
+  z-index: 60;
+}
+
+.case-studies-active {
+  position: relative;
+}
+
+.case-studies-active::after {
+  content: '';
+  position: absolute;
+  bottom: -15px;
+  left: 0;
+  width: 100%;
+  height: 8px;
+  background-color: #3a3dc4;
+  z-index: 60;
+}
